--- a/Student/src/main/resources/application.properties
+++ b/Student/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=student
-
+server.port=8081
+spring.data.mongodb.uri=mongodb+srv://<username>:<password>@cluster0.v3q63.mongodb.net/?retryWrites=true&w=majority
+spring.application.name=student
+ 
+eureka.instance.hostname=localhost
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
