--- a/Student/src/main/resources/application.properties
+++ b/Student/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=8081
-spring.data.mongodb.uri=mongodb+srv://<username>:<password>@cluster0.v3q63.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://<username>:1234@cluster0.v3q63.mongodb.net/student
 spring.application.name=student
- 
-eureka.instance.hostname=localhost
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
