SpringBoot Code updated 23-11-13

--- a/Student/src/main/resources/application.properties
+++ b/Student/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8081
-spring.data.mongodb.uri=mongodb+srv://<username>:1234@cluster0.v3q63.mongodb.net/student
-spring.application.name=student
-logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
+
+#"spring.data.mongodb.uri=mongodb+srv://<username>:1234@cluster0.v3q63.mongodb.net/student
+#spring.application.name=student
+#logging.level.root=INFO
+#logging.level.org.springframework.web=DEBUG
