--- a/springboot-restful-webservices/src/main/resources/application.properties
+++ b/springboot-restful-webservices/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.password=Kkiran@2118
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+management.endpoints.web.exposure.include=*
+manamgement.info.env.enabled=true
+management.endpoint.health.show-details=always
+//management.endpoint.shutdown.enabled=true
+
+info.app.name=Spring boot
+info.app.description=spring restfull web services
+info.app.version=1.0.0
